smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/map-empty-members.smithy
// Parse error at line 4, column 12 near `}`: Missing required members of map shape `com.foo#MyMap`: [`key`, `value`]
namespace com.foo

map MyMap {}
